# agent-studio

./: .buildinfo  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  annotate_ground_ui.py  doc_index.html  eval_dataset.py  genindex.html  index.html  minimal_example.py  model_server.py  objects.inv  online_benchmark.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_windows.txt  run.py  run_controller.py  search.html  searchindex.js  setup.cfg  setup.py  setup_api_keys.py  trajectory_editor.py  trajectory_recorder.py
.doctrees/: doc_index.doctree  environment.pickle  index.doctree
_sources/: doc_index.rst  index.rst
agent/: __init__.py  base_agent.py  direct_agent.py  teacher_forcing.py  teacher_forcing_agent.py
agent_studio/: __init__.py
config/: env_config.py  environments.json  lm_config.py  schema.json
data/: filesystem.json  gcalendar.json  gcalendar_filesystem.json  gmail.json  process.json
dockerfiles/: Dockerfile.ubuntu.amd64  Dockerfile.ubuntu22.04.amd64
docs/: README.md  annotate_ground_ui.md  install.md  online_benchmark.md  requirements-docs.txt
eval_agent_desiderata/: README.md  common.py  eval_base.py  eval_gui_grounding.py  eval_idm.py  online_benchmark_analysis.py  re_caption_gui_grounding_data.py
eval_online_benchmarks/: README.md
evals/: README.md  caption_gui_grounding.py  common.py  eval_gui_grounding.py  eval_gui_grounding_dist.py  eval_idm.py  eval_idmn2n.py  eval_success_detection.py  gui_grounding_eval.py  main.py  make_report.py  process_gui_grounding.py  re_caption_gui_grounding_data.py  schema.py  split_subset.py
finetune/: ds_config_zero2.json  finetune.py  process_data.py  run.sh
getting_started/: annotation.html  connect_model.html  create_agents.html  evaluate_agents.html  installation.html  setup_api_keys.html  start_recording.html  troubleshooting.html  upload_results.html
llm/: __init__.py  base_llm.py  huggingface.py  openai.py  vllm.py
main_page_resources/: fonts.css
playground/: __init__.py
scripts/: agent_server.py  calculate_grounding_results.py  calculate_results.py  docker_startup.sh  (+9 more)
(+1039 files in other folders)
