[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_studio"
version = "0.0.1"
requires-python = ">=3.10,<4.0"

[tool.setuptools]
packages = ["agent_studio"]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==7.0.0",
    "flake8-bugbear==23.12.2",
    "flake8-quotes==3.3.2",
    "mypy==1.8.0",
    "mypy-extensions==1.0.0",
    "pre-commit==3.6.0",
    "pytest==7.4.4",
    "types-requests==2.31.0.20240106",
    "check-jsonschema==0.27.3",
    "jsonschema==4.20.0"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
python_files = "test_*.py"
