[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_studio"
version = "0.1.1"
requires-python = ">=3.10,<4.0"

[tool.setuptools]
packages = ["agent_studio"]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.0.0",
    "flake8-bugbear==24.4.26",
    "flake8-quotes==3.3.2",
    "mypy==1.8.0",
    "mypy-extensions==1.0.0",
    "pre-commit==3.6.0",
    "pytest==8.3.2",
    "types-requests==2.32.0.20240712",
    "check-jsonschema==0.29.1",
    "jsonschema==4.20.0"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
as-traj-editor = "agent_studio.apps.trajectory_editor:main"
as-traj-recorder = "agent_studio.apps.trajectory_recorder:main"
as-annotate-ground = "agent_studio.apps.annotate_ground_ui:main"
as-online-benchmark = "agent_studio.apps.online_benchmark:main"
