[metadata]
name = playground

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    black==23.12.1
    flake8==7.0.0
    flake8-bugbear==23.12.2
    flake8-quotes==3.3.2
    mypy==1.8.0
    mypy-extensions==1.0.0
    pre-commit==3.6.0
    pytest==7.4.4

[options]
python_requires = >=3.11, <4
packages =
    desktop_env
    agent
    llm
